# media-collector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config-docker.toml  config-exemple.toml  docker-compose.yml
src/: main.rs
src/anime/: error.rs  mod.rs  module.rs
src/anime/anilist/: converter.rs  database.rs  mod.rs  model.rs  module.rs  queries.rs
src/anime/anilist/task/: fetch_anime.rs  fetch_pictures_for_anime.rs  mod.rs  search_anime.rs
src/anime/my_anime_list/: converter.rs  database.rs  fetch.rs  mod.rs  model.rs  module.rs
src/anime/my_anime_list/task/: batch_fetch.rs  fetch_anime.rs  fetch_extended.rs  fetch_pictures_for_anime.rs  mod.rs  search_anime.rs  update_anime.rs
src/api/: mod.rs  server.rs  state.rs
src/api/routes/: anime.rs  health.rs  mod.rs  picture.rs
src/database/: database.rs  mod.rs
src/error/: app.rs  database.rs  mod.rs
src/global/: config.rs  database.rs  error.rs  http.rs  mod.rs  model.rs  module.rs  queue.rs  state.rs
src/picture/: database.rs  mod.rs  model.rs  task.rs
