[package]
name = "media-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }          # async runtime
reqwest = { version = "0.12", features = ["json"] }     # HTTP client
serde = { version = "1", features = ["derive"] }        # serialization
serde_json = "1"                                        # JSON parsing
mongodb = "3.2.4"                                       # Database

thiserror = "2"                                         # Clean error handling
anyhow = "1"