[package]
name = "media-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3.2.4"

thiserror = "2"
anyhow = "1"
governor = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
config = "0.14"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
urlencoding = "2.1"

# Web server
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
hyper = "1.8"
regex = "1.10"
serde_with = "3"